<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:padding="@dimen/margin_double"
      >
    <ImageButton
        android:id="@+id/share_image"
        android:layout_width="0dp"
        android:layout_height="@dimen/share_image_height"
        android:layout_weight="2"
        android:contentDescription="@string/share_image"
        android:src="@drawable/ic_camera"
        />

    <EditText
        android:id="@+id/share_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_single"
        android:layout_weight="3"
        android:hint="@string/share_message_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
  </LinearLayout>

  <Button
      android:id="@+id/share_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_double"
      android:backgroundTint="@color/colorAccent"
      android:padding="@dimen/margin_triple"
      android:text="@string/share_button"
      android:textAllCaps="true"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textColor="@color/white"
      />

</LinearLayout>