<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.bloco.introduction.LoginActivity"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="@dimen/margin_triple"
      >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:contentDescription="@string/app_name"
          android:src="@drawable/ic_events"
          android:tint="@color/colorAccent"
          />
    </FrameLayout>

    <EditText
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_single"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <Button
        android:id="@+id/login_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:drawablePadding="@dimen/margin_single"
        android:padding="@dimen/margin_triple"
        android:text="@string/next"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        />
  </LinearLayout>
</FrameLayout>
